# Study-Alone

./: README.md
Average_Filter/: AvgFilter.m  TestAvgFilter.m
C++/: class1.cpp  dynamic_allocate.cpp  reference.cpp
C++/C++ Basic/: README.md  TMP1.cpp  TMP2.cpp  algorithm.cpp  class2.cpp  class3.cpp  class_inheretance3.cpp  class_inheritance1.cpp  class_inheritance2.cpp  map.cpp  set.cpp  string.cpp  template1.cpp  template2.cpp  this,reference_return.cpp  variable_length_template.cpp  vector.cpp
C++/Data Structure/: README.md  dequeue.cpp  queue.cpp
C++/Data Structure, Algorithm/: DFS.cpp  stack.cpp
C++/PCL/: CMakeLists.txt  transformation.cpp  tutorial0.cpp  tutorial1.cpp
CARLA/: README.md
CARLA/Waypointfollower/: PIDController.py  location_output.txt  main.py  parameter.py  velocity_output.txt  waypoints.txt
CARLA/lidar_visulization/: callback.py  main.py  parameters.py
CARLA/load_xodr/: Road_1_sample.xodr  Road_1_sample.xosc  main.py  parameters.py
Deep Learning/CNN(7장)/: 밑바닥부터 시작하는 딥러닝(7장).ipynb
Deep Learning/신경망 학습(4장)/: 밑바닥부터 시작하는 딥러닝(4장).ipynb
Deep Learning/신경망(3장)/: 밑바닥부터 시작하는 딥러닝(3장).ipynb
Deep Learning/오차역전파(5장)/: 밑바닥부터 시작하는 딥러닝(4장).ipynb  밑바닥부터 시작하는 딥러닝(5장).ipynb
Deep Learning/학습기술(6장)/: 밑바닥부터 시작하는 딥러닝(6장).ipynb
Matlab/: Gaussian_Distribution.m
OptimizationTechniques/: ot_01.mlx  ot_03.mlx
Pytorch/: Pytorch Basic.ipynb  파이토치 신경망 생성.ipynb  파이토치(PyTorch) 기초.ipynb
Simulink/: PI_Controller.slx
VehicleDynamics/: calculate_radius.m  eigen_value_method.m  lateral_feedback_controller.m  plot_global_pose.m
(+67 files in other folders)
